// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuIcon /> renders properly 1`] = `
<div>
  <i
    aria-label="toggle menu"
    class="jsx-291958763 menuIcon hidden"
    data-testid="menuIcon_button"
    role="button"
    tabindex="0"
  >
    <span
      class="jsx-291958763"
    />
  </i>
</div>
`;

exports[`<MenuIcon /> renders properly when menu is open 1`] = `
<div>
  <i
    aria-label="toggle menu"
    class="jsx-291958763 menuIcon open hidden"
    data-testid="menuIcon_button"
    role="button"
    tabindex="0"
  >
    <span
      class="jsx-291958763"
    />
  </i>
</div>
`;

exports[`<MenuIcon /> renders properly when the icon is visible is open 1`] = `
<div>
  <i
    aria-label="toggle menu"
    class="jsx-291958763 menuIcon"
    data-testid="menuIcon_button"
    role="button"
    tabindex="0"
  >
    <span
      class="jsx-291958763"
    />
  </i>
</div>
`;
